using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace BehaviourTrees.Decolators
{
    public class Decorator
    {
        
    }
}

