using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace BehaviourTrees.Nodes.Composites
{
    public class Sequence : Composite
    {
        public override void Excute()
        {
            
        }
    }
}

