using BehaviourTrees.Nodes.Composites;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace BehaviourTrees.Nodes
{
    public class Root : Node
    {
        Composite child;
        Blackboard blackboard;

        public override void Excute()
        {
            
        }
    }
}

