using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace BehaviourTrees.Nodes.Tasks
{
    public class Task : MonoBehaviour
    {
        
    }
}

